# ComfyUI-Artist-Gallery

./: ARTIST_SELECTOR_TEST.md  CLAUDE.md  CONFIG_FEATURE_FINAL.md  IMPLEMENTATION_SUMMARY.md  MIGRATION.md  OPTIMIZATION_SUMMARY.md  QUICKSTART.md  README.md  RENAME_ARTIST_GUIDE.md  STYLE_GUIDE.md  TESTING.md  TESTING_GUIDE.md  TODO.md  __init__.py  api_routes.py  artists.json  categories.json  image_artists.json  import_handler.py  new featue.md  nodes.py  pyproject.toml  storage.py  test_import.py  utils.py
.claude/: settings.local.json
backup_20260328_151542/: image_artists.json
docs/: data-flow.md
routes/: __init__.py  artists.py  batch.py  categories.py  combinations.py  cycle_state.py  gallery.py  images.py  import_export.py  init.py  migration.py
storage/: __init__.py  _resolve.py  artist.py  category.py  combination.py  image_mapping.py  migration.py
web/: Draggable.js  artist_gallery.js  artist_gallery.js.bak  debug.js  utils.js
web/components/: AddArtistDialog.js  ArtistDetailModal.js  ArtistDetailView.js  BaseCard.js  BatchActionBar.js  BatchConfirmDialog.js  Breadcrumb.js  CategoryCard.js  CategoryDialog.js  CombinationCard.js  CombinationDetailView.js  CombinationDialog.js  ContextMenu.js  CopyDialog.js  CoverImageSelector.js  DeleteConfirmDialog.js  Dialog.js  Dialog.md  ExportDialog.js  FileUploader.js  FlatSelector.js  GalleryCard.js  GalleryContext.js  GalleryFilterBar.js  GalleryGrid.js  GalleryHeader.js  GalleryModal.js  ImageInfoDialog.js  ImportImagesDialog.js  ImportPreview.js  LazyList.js  Lightbox.js  MoveDialog.js  SizePresets.js  (+2 more)
(+50 files in other folders)
